config/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  namespace: system
  labels:
    app.kubernetes.io/name: maxicloud
    app.kubernetes.io/managed-by: kustomize
spec:
  ingressClassName: nginx
  rules:
    - host: localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
